--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,21 +1,44 @@
+// Header Section
+.header-section{
+  .header{
+    .section-padding-border;
+    @media @phone{
+      .section-padding-phone-mixin;
+    }
+    .header-img{
+      margin-bottom:1.5%;
+    }
+  }
+}
+//Home Section
 .home {
-
+  @media @phone{
+    .section-padding-phone-mixin;
+  }
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    @media @phone{
+      flex-flow: column wrap;
+    }
    
     
     .text-content {
       width: 48%;
       padding-right: 1%;
+      @media @phone{
+        width: 100%;
+      }
     }
 
     .img-content {
       width: 48%;
       padding-left: 1%;
+      @media @phone{
+        width: 100%;
+      }
 
       img {
         border-radius: 10px;
@@ -26,7 +49,9 @@
   .inverse-content {
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
-
+    @media @phone{
+      flex-flow: column-reverse nowrap;
+    }
     .text-content {
       padding-left: 1%;
       padding-right: 0;
@@ -41,7 +66,9 @@
   .content-destination {
     width: 75%;
     margin: 0 auto 30px;
-
+    @media @phone{
+      width: 100%;
+    }
     img {
       border-radius: 10px;
     }
@@ -52,10 +79,24 @@
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
+    @media @phone{
+      padding-left: 6%;
+      padding-right: 6%;
+    }
+
+    @media @phone{
+      flex-flow: column wrap;
+    }
 
     .destination {
       width: 30%;
       margin-bottom: 30px;
+      @media @phone{
+        width: 100%;
+      }
+    }
+    .btn{
+      .button-mixin;
     }
   }
 }// home
